--- a/static/style.css
+++ b/static/style.css
@@ -96,7 +96,6 @@ ul{
 .form-container {
     width: 800px;
     margin: auto; 
-    margin-top: 15%;
     position: relative;
     border: 2px solid black; 
     background-color: beige;
@@ -155,6 +154,11 @@ ul{
 .pagination li:active{
     background-color: rgb(112, 112, 255);
 }
+
+.selected-row {
+    background-color: red;
+}
+
 /*------------------------------------------------*/
 
 .table-container2 {
@@ -193,7 +197,6 @@ ul{
     position: relative;
     border: 2px solid black; 
     background-color: beige;
-    margin-top: 80px;
 }
 
 .table-container2 table {
@@ -216,7 +219,6 @@ ul{
 }
 
 .footer{
-    margin-top: 10px;
     background-color: rgb(41, 41, 41);
     height: 60px;
 }
@@ -224,4 +226,19 @@ ul{
 .container p{
     margin-top: 8px;
     margin-left: 50px;
+}
+
+h2 {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 1%;
+}
+.routs{
+    margin-top: 5%;
+    margin-bottom: 3%;
+}
+
+.zayavki{
+    margin-top: 5%;
+    margin-bottom: 3%;
 }
